feat: mcp 测试通过
